fix plant display

--- a/client/src/app/components/navigator/navigator.component.html
+++ b/client/src/app/components/navigator/navigator.component.html
@@ -65,7 +65,7 @@
             <div class="form-check form-check-inline">
                 <label class="form-check-label" for="Acacia">
                     <input id="Acacia" class="form-check-input" type="checkbox" [(ngModel)]="ala1"
-                           (change)="plantdataService.addAlaData('data1x')"/>
+                           (change)="this.addAlaData('data1x')"/>
                     Acacia dealbata</label>
             </div>
         </div>
