--- a/client/src/app/index/index.component.html
+++ b/client/src/app/index/index.component.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
     <as-split id="allSplit" unit="percent" [direction]="direction" (dragEnd)="dragEnd('percent', $event)" #split="asSplit">
-        <as-split-area id="panel" size="5" #area1="asSplitArea">
+        <as-split-area id="panel" size="12" #area1="asSplitArea">
             <as-split style="height: 91%;" unit="pixel" direction="vertical" (dragEnd)="dragEnd('percent', $event)" #split="asSplit">
                 <as-split-area id="nav" size="{{advanced?423:50}}" #area1="asSplitArea">
                     <navigator [indexComponent]="this" [ntnl]="ntnl" [pushQuery]="selectedSection"></navigator>
@@ -36,7 +36,7 @@
                 </as-split-area>
             </as-split>
         </as-split-area>
-        <as-split-area size="85" #area2="asSplitArea">
+        <as-split-area size="78" #area2="asSplitArea">
             <div id="map"></div>
             <i id="location">{{location}}</i>
             <i style="color: lightgray;">version: {{configService.version}}</i>
@@ -57,11 +57,8 @@
                 </button>
             </div>
             <div id="legend-simple" *ngIf="legendSee">
-                <div><i class="legend">&#xE003;</i> Bar</div>
+                <div><i class="legend">&#xE003;</i> Plant</div>
                 <hr>
-            </div>
-            <div *ngIf="configService.user">Show &nbsp;
-                <button class="btn btn-primary" style="font-size:8px" (click)="addNtnl()">Add Bar</button>
             </div>
         </as-split-area>
     </as-split>
