--- a/client/src/app/index/index.component.html
+++ b/client/src/app/index/index.component.html
@@ -25,41 +25,49 @@
             <p style="font-size:8px;color:#ff0000;">{{message}}</p>
         </div>
     </nav>
-    <as-split id="allSplit" unit="percent" [direction]="direction" (dragEnd)="dragEnd('percent', $event)" #split="asSplit">
-        <as-split-area id="panel" size="12" #area1="asSplitArea">
-            <as-split style="height: 91%;" unit="pixel" direction="vertical" (dragEnd)="dragEnd('percent', $event)" #split="asSplit">
-                <as-split-area id="nav" size="{{advanced?423:50}}" #area1="asSplitArea">
-                    <navigator [indexComponent]="this" [ntnl]="ntnl" [pushQuery]="selectedSection"></navigator>
-                </as-split-area>
-                <as-split-area id="res" size="*" #area2="asSplitArea">
-                    <info [version]="this.version" ></info>
-                </as-split-area>
-            </as-split>
-        </as-split-area>
-        <as-split-area size="78" #area2="asSplitArea">
-            <div id="map"></div>
+    <navigator [indexComponent]="this" [ntnl]="ntnl" [pushQuery]="selectedSection"></navigator>
+<!--    <as-split id="allSplit" unit="percent" direction="vertical" (dragEnd)="dragEnd('percent', $event)" #split="asSplit">-->
+<!--        <as-split-area id="panel" size="12" #area1="asSplitArea">-->
+<!--            <as-split style="height: 91%;" unit="pixel" direction="vertical" (dragEnd)="dragEnd('percent', $event)" #split="asSplit">-->
+<!--        <as-split-area id="nav" size="80" #area1="asSplitArea">-->
+<!--            <navigator [indexComponent]="this" [ntnl]="ntnl" [pushQuery]="selectedSection"></navigator>-->
+<!--        </as-split-area>-->
+<!--            </as-split>-->
+<!--        </as-split-area>-->
+<!--        <as-split-area size="*" #area2="asSplitArea">-->
+<!--    <div style="height:100%;width:100%;">-->
+<!--    <div>-->
+            <as-split style="height: 96%;" unit="pixel" direction="horizontal" (dragEnd)="dragEnd('percent', $event)" #split="asSplit">
+                <as-split-area id="nav" size="*" #area1="asSplitArea">
+            <div id="map" style="height:98%;width:100%;"></div>
             <i id="location">{{location}}</i>
             <i style="color: lightgray;">version: {{configService.version}}</i>
             <i  style="color: lightgray;" *ngIf="showInfo">
             server endpoint: <a style="color: lightgray;" href="{{configService.apiHost()}}">{{configService.apiHost()}}</a>, server: {{config.getConfig('server')}}, environment: {{config.getEnv('env')}}
             </i>
-        </as-split-area>
-        <as-split-area id="legend" size="10" #area3="asSplitArea">
-            <h1>Legend</h1>
-            <div>Feature
-                <button *ngIf="configService.user" id="close-plantings" class="btn btn-secondary btn-sm float-right" href="#" title="Hide Section" (click)="legendHide()">
-                    <ng-template [ngIf]="legendSee" [ngIfElse]="elseLegendSee">
-                        &#x2303;
-                    </ng-template>
-                    <ng-template #elseLegendSee>
-                        &#x2304;
-                    </ng-template>
-                </button>
-            </div>
-            <div id="legend-simple" *ngIf="legendSee">
-                <div><i class="legend">&#xE003;</i> Plant</div>
-                <hr>
-            </div>
-        </as-split-area>
-    </as-split>
+                </as-split-area>
+                <as-split-area id="res" size="300" #area2="asSplitArea">
+                    <info [version]="this.version" ></info>
+                </as-split-area>
+            </as-split>
+<!--    </div>-->
+<!--        </as-split-area>-->
+<!--        <as-split-area id="legend" size="10" #area3="asSplitArea">-->
+<!--            <h1>Legend</h1>-->
+<!--            <div>Feature-->
+<!--                <button *ngIf="configService.user" id="close-plantings" class="btn btn-secondary btn-sm float-right" href="#" title="Hide Section" (click)="legendHide()">-->
+<!--                    <ng-template [ngIf]="legendSee" [ngIfElse]="elseLegendSee">-->
+<!--                        &#x2303;-->
+<!--                    </ng-template>-->
+<!--                    <ng-template #elseLegendSee>-->
+<!--                        &#x2304;-->
+<!--                    </ng-template>-->
+<!--                </button>-->
+<!--            </div>-->
+<!--            <div id="legend-simple" *ngIf="legendSee">-->
+<!--                <div><i class="legend">&#xE003;</i> Plant</div>-->
+<!--                <hr>-->
+<!--            </div>-->
+<!--        </as-split-area>-->
+<!--    </as-split>-->
 </div>
