--- a/client/src/app/components/info/info.component.html
+++ b/client/src/app/components/info/info.component.html
@@ -11,7 +11,7 @@
 <!--<h2 *ngIf="plantDataService.jsonData.results?.plants?.features?.length == 0 && (plantDataService.jsonData.results?.ntnl?.features?.length == 0 || !plantDataService.jsonData?.criteria?.ntnl)">No results</h2>-->
 <div #infoPane id="infoPaneCheckboxes" class="info-pane" *ngIf="mapService.geojson; else elseBlock">
     <div *ngFor="let f of mapService.geojson.features">
-        <input id="regions" class="form-check-input" type="checkbox" [(ngModel)]="f.checked" (change)="mapService.setSelected(f, f.checked)"/>
+        <input id="regions" class="form-check-input" type="checkbox" [(ngModel)]="f.checked" (change)="mapService.resetHighlight(f)"/>
 <!--               [(ngModel)]="ala1"-->
 <!--               (change)="this.addAlaData('data1x')"/>-->
         {{f.properties.publicDisplayName}}
